--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,13 @@ services:
       - .env
     # restart: always
 
-  # mariadb:
-  #   build:
-  #     context: ./requirements/mariadb
-  #     dockerfile: dockerfile
-  #   container_name: mariadb
-  #   ports:
-  #     - "443:443"
-  #   environment:
-  #     - .env
+  mariadb:
+    image: mariadb_inception
+    container_name: mariadb
+    # ports:
+    #   - "443:443"
+    # environment:
+    #   - .env
     # restart: always
 
   # wordpress:
