--- a/srcs/requirements/mariadb/dockerfile
+++ b/srcs/requirements/mariadb/dockerfile
@@ -2,14 +2,14 @@
 
 FROM		alpine:3.17
 RUN			apk update && apk upgrade && apk add	\
+							sudo			\
 							openssl			\
-							nginx			\
-							curl			\
-							vim				\
-							sudo
+							mariadb			\
+							curl
 # RUN			rm -f /etc/nginx/nginx.conf
 # COPY		./config/nginx.conf /etc/nginx/nginx.conf
 # COPY		scripts/setup_nginx.sh /setup_nginx.sh
 # RUN			chmod -R +x /setup_nginx.sh
-EXPOSE		443
+# EXPOSE		443
 # ENTRYPOINT	["sh", "setup_nginx.sh"]
+# CMD 		["sleep", "infinity"]
