--- a/srcs/requirements/nginx/dockerfile
+++ b/srcs/requirements/nginx/dockerfile
@@ -7,7 +7,7 @@ RUN			apk update && apk upgrade && apk add	\
 							curl			\
 							sudo
 RUN 		sudo mkdir -p /etc/nginx/ssl
-RUN 		openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=CA/ST=Quebec/L=Quebec/O=42/OU=42/CN=tbeaudoi.42.qc/UID=tbeaudoi"
+RUN 		openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=CA/ST=Quebec/L=Quebec/O=42/OU=42/CN=tbeaudoi.42.fr/UID=tbeaudoi"
 RUN			mkdir -p /var/run/nginx
 RUN			rm -rf /etc/nginx/nginx.conf
 COPY		./conf/nginx.conf /etc/nginx/nginx.conf
@@ -17,7 +17,7 @@ RUN 		sudo mkdir -p /var/www/html
 RUN 		chmod 755 /var/www/html
 RUN 		chown -R www:www /var/run/nginx
 RUN 		chown -R www:www /var/www/html
-CMD 		["nginx", "-g", "daemon off;"]
+ENTRYPOINT 	["nginx", "-g", "daemon off;"]
 
 # COPY		scripts/setup_nginx.sh /setup_nginx.sh
 # RUN			chmod -R +x /setup_nginx.sh
