--- a/srcs/requirements/nginx/dockerfile
+++ b/srcs/requirements/nginx/dockerfile
@@ -1,7 +1,7 @@
 
 
 FROM		alpine:3.17
-RUN			apk update && apk upgrade && apk add	\
+RUN			apk update && apk upgrade && apk --no-cache add 	\
 							openssl			\
 							nginx			\
 							curl			\
