--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,8 +1,6 @@
 # /etc/nginx/nginx.conf
 
-user nginx;
-
-					
+user www;
 
 # Set number of worker processes automatically based on number of CPU cores.
 worker_processes auto;
@@ -36,7 +34,7 @@ http {
 		#root and index and server_name
 		root /var/www/html;
 		server_name localhost;
-		index index.php index.html index.htm;
+		index index.html;
 	}
 
 	# location / {
