--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,17 +1,23 @@
 version: "3.5"
 services:
   nginx:
-    image: nginx_inception
-    container_name: nginx
+    build:
+      context: requirements/nginx
+      dockerfile: dockerfile
+    container_name: nginx-inception
     ports:
       - "443:443"
     environment:
       - .env
-    # restart: always
+    volumes:
+      - ./requirements/wordpress/www/:/var/www/html/
+    restart: always
 
   mariadb:
-    image: mariadb_inception
-    container_name: mariadb
+    build:
+      context: requirements/mariadb
+      dockerfile: dockerfile
+    container_name: mariadb-inception
     # ports:
     #   - "443:443"
     # environment:
