--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: requirements/nginx
       dockerfile: dockerfile
+    image: nginx-inception
     container_name: nginx-inception
     ports:
       - "443:443"
@@ -17,6 +18,7 @@ services:
     build:
       context: requirements/mariadb
       dockerfile: dockerfile
+    image: mariadb-inception
     container_name: mariadb-inception
     # ports:
     #   - "443:443"
