--- a/srcs/requirements/mariadb/dockerfile
+++ b/srcs/requirements/mariadb/dockerfile
@@ -1,10 +1,8 @@
 
 
-FROM		alpine:3.17
-RUN			apk update && apk upgrade && apk --no-cache add	\
-							sudo			\
-							mariadb			\
-							curl
+FROM		debian:11-slim
+RUN			apt update -y && apt upgrade -y && apt-get install	\
+							mariadb-server -y
 # RUN			rm -f /etc/nginx/nginx.conf
 # COPY		./config/nginx.conf /etc/nginx/nginx.conf
 # COPY		scripts/setup_nginx.sh /setup_nginx.sh
