--- a/srcs/requirements/mariadb/tools/my.cnf
+++ b/srcs/requirements/mariadb/tools/my.cnf
@@ -7,7 +7,12 @@
 
 # this is only for the mysqld standalone daemon
 [mysqld]
-skip-networking
+basedir = /usr
+datadir = /var/lib/mysql
+socket = /run/mysqld/mysqld.sock
+bind_address = 0.0.0.0
+port = 3306
+user = mysql
 
 # Galera-related settings
 [galera]
