modified nginc config

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -35,16 +35,17 @@ http {
 		root /var/www/html;
 		server_name localhost;
 		index index.html;
+		
+		location ~ \.php$ {								# Pour toutes les requetes php
+			#include snippe ts/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
+		}
 	}
 
 	# location / {
 	# 	try_files $uri $uri/ =404;
 	# }
 
-	# location ~ \.php$ {								# Pour toutes les requetes php
-	# 	include snippets/fastcgi-php.conf;
-	# 	fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
-	# }
 
 	# Includes mapping of file name extensions to MIME types of responses
 	# and defines the default type.
