--- a/srcs/requirements/mariadb/dockerfile
+++ b/srcs/requirements/mariadb/dockerfile
@@ -6,13 +6,14 @@ RUN			apk update && apk upgrade && apk --no-cache add	\
 							&& rm -rf /var/lib/apt/lists/*
 
 COPY		./tools/mariadb_config.sh /usr/local/bin/
-#COPY		./tools/mysql_setup.sql /var/lib/mysql/
+# COPY		./tools/mysql_setup.sql /usr/local/bin/
 COPY		./tools/my.cnf /etc/my.cnf.d
 
 RUN			sed -i 's/\r//g' /usr/local/bin/mariadb_config.sh
-#RUN			sed -i 's/\r//g' /var/lib/mysql/mysql_setup.sql
+# RUN			sed -i 's/\r//g' /usr/local/bin/mysql_setup.sql
 
 RUN 		chmod +x /usr/local/bin/mariadb_config.sh
+# RUN 		chmod 777 /usr/local/bin/mysql_setup.sql
 
 EXPOSE 		3306	
 
