--- a/srcs/requirements/nginx/dockerfile
+++ b/srcs/requirements/nginx/dockerfile
@@ -8,17 +8,17 @@ RUN			apk update && apk upgrade && apk --no-cache add 	\
 							sudo
 
 RUN 		sudo mkdir -p /etc/nginx/ssl
-RUN 		openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=CA/ST=Quebec/L=Quebec/O=42/OU=42/CN=tbeaudoi.42.fr/UID=tbeaudoi"
+RUN 		openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=CA/ST=Quebec/L=Quebec/O=42/OU=42/CN=tbeaudoi.42.fr/UID=tbeaudoi.42.fr"
 RUN			mkdir -p /var/run/nginx
 RUN			rm -rf /etc/nginx/nginx.conf
 COPY		./conf/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE		443
-RUN			adduser	-D -g 'www' www
+# RUN			adduser	-D -g 'www-data'
 RUN 		sudo mkdir -p /var/www/html
 RUN 		chmod 755 /var/www/html
-RUN 		chown -R www:www /var/run/nginx
-RUN 		chown -R www:www /var/www/html
+# RUN 		chown -R www-data:www-data /var/run/nginx
+RUN 		chown -R nginx:nginx /var/www/html
 ENTRYPOINT 	["nginx", "-g", "daemon off;"]
 
 # COPY		scripts/setup_nginx.sh /setup_nginx.sh
